<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="1dp">


    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:background="@drawable/dialog_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">


        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="204dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/sign_out_and_disconnect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="visible">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/dialog_btn"
                android:text="@string/dialog_out"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_facebook"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_above="@+id/sign_in_button"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txt_dialog_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/dialog_msg"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_gravity="bottom|right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_complete"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/dialog_confirm"
                android:textColor="@color/dialog_btn_bg" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/dialog_cancel"
                android:textColor="@color/dialog_btn_bg" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>